src/snapshot/tests/snapshots/librojo__snapshot__tests__apply__remove_property_after_patch.snap
---
source: src/snapshot/tests/apply.rs
expression: tree_view
---
id: id-1
name: ROOT
class_name: ROOT
properties: {}
metadata:
  ignore_unknown_instances: false
  relevant_paths: []
  context:
    emit_legacy_scripts: true
  middleware: ~
  specified_id:
    Ref: "00000000000000000000000000000000"
children: []

